# astroplpython

./: .gitignore  LICENSE  MANIFEST.in  README.md  pytest.ini  setup.cfg  setup.py  test_coverage.sh  tox.ini
astroplpython/data/: Measurement.py  Periodogram.py  PowerFrequencyMeasurement.py  TimeMeasurement.py  Timeseries.py
astroplpython/data/test/: test_Timeseries.py
astroplpython/exception/: ListException.py
astroplpython/function/fitting/: GaussianFit.py
astroplpython/function/signal/: LSPeriodogram.py
astroplpython/function/statistic/: Maximum.py
astroplpython/proc/: LSPeriodogram.py
astroplpython/proc/test/: test_LSPeriodogram.py
sql/: astroplpython.sql  test.sql
tests/astroplpython/data/: test_Measurement.py  test_PowerFreqMeasurement.py  test_TimeMeasurement.py  test_Timeseries.py
tests/astroplpython/function/: test_LSPeriodogram.py.orig
tests/astroplpython/function/signal/: test_LSPeriodogram.py
tests/astroplpython/function/statistic/: test_Maximum.py
tests/astroplpython/proc/: test_LSPeriodogram.py
util/: coverage.sh
