[metadata]
description-file = README.md

[nosetests]
# locating tests
#where=./tests
include=^test_*.py
# coverage
with-coverage=1
cover-branches=1
cover-package=astroplpython
#cover-html=1
#cover-html-dir=htmlcov
#with-xcoverage=1
#xcoverage-file=coverage.xml
#with-xunit=1
#xunit-file=nose_xunit.xml
cover-erase=1
